implemented features to view notes

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "default": "to-do-list-2a702"
+    "default": "to-do-list-2a702",
+    "cssi-day13": "cssifirebasenotes"
   }
 }
